--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/home.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/largeItemHtml.js"></script>
     <script src="js/home.js" defer></script>
     <title>Home</title>
   </head>
@@ -58,70 +59,13 @@
 
       <div class="category-box">
         <nav>
-          <div class="category-tag">VietNam</div>
-          <div class="category-tag">Foreign</div>
-          <div class="category-tag">Game Music Theme</div>
+          <div class="category-tag" onclick="sortByTag('vietnam')">VietNam</div>
+          <div class="category-tag" onclick="sortByTag('foreign')">Foreign</div>
+          <div class="category-tag" onclick="sortByTag('gamethemesong')">Game Music Theme</div>
+          <div class="category-tag" onclick="sortByTag('random')">Random</div>
         </nav>
         <section class="category-show-item">
-          <div class="category-item-box">
-            <div class="play-svg">
-              <svg
-                width="30px"
-                height="30px"
-                viewBox="0 0 24 24"
-                fill="none"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M12 6.00019C10.2006 3.90317 7.19377 3.2551 4.93923 5.17534C2.68468 7.09558 2.36727 10.3061 4.13778 12.5772C5.60984 14.4654 10.0648 18.4479 11.5249 19.7369C11.6882 19.8811 11.7699 19.9532 11.8652 19.9815C11.9483 20.0062 12.0393 20.0062 12.1225 19.9815C12.2178 19.9532 12.2994 19.8811 12.4628 19.7369C13.9229 18.4479 18.3778 14.4654 19.8499 12.5772C21.6204 10.3061 21.3417 7.07538 19.0484 5.17534C16.7551 3.2753 13.7994 3.90317 12 6.00019Z"
-                  stroke="white"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <!--  -->
-              <svg width="50px" height="50px" viewBox="0 0 24 24" fill="none">
-                <path
-                  d="M16.6582 9.28638C18.098 10.1862 18.8178 10.6361 19.0647 11.2122C19.2803 11.7152 19.2803 12.2847 19.0647 12.7878C18.8178 13.3638 18.098 13.8137 16.6582 14.7136L9.896 18.94C8.29805 19.9387 7.49907 20.4381 6.83973 20.385C6.26501 20.3388 5.73818 20.0469 5.3944 19.584C5 19.053 5 18.1108 5 16.2264V7.77357C5 5.88919 5 4.94701 5.3944 4.41598C5.73818 3.9531 6.26501 3.66111 6.83973 3.6149C7.49907 3.5619 8.29805 4.06126 9.896 5.05998L16.6582 9.28638Z"
-                  stroke="white"
-                  stroke-width="2"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <!--  -->
-              <svg width="30px" height="30px" viewBox="0 0 24 24" fill="white">
-                <circle
-                  cx="7"
-                  cy="12"
-                  r="1.5"
-                  stroke="white"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <circle
-                  cx="12"
-                  cy="12"
-                  r="1.5"
-                  stroke="white"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <circle
-                  cx="17"
-                  cy="12"
-                  r="1.5"
-                  stroke="white"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
-            <img src="music/img/default.jpg" alt="no-img" />
-            <p class="music-name">music name</p>
-            <p class="author">hoang nam</p>
-          </div>
+          <!-- tag item show here -->
         </section>
       </div>
       <footer></footer>
@@ -248,6 +192,7 @@
         </button>
       </div>
       <div class="play-zone-btn-box">
+        <p id="music-time-current" class="music-time-p">00:00</p>
         <input
           type="range"
           name="music"
@@ -257,7 +202,7 @@
           value="0"
           onchange="onDurationChange(event.target.value)"
         />
-        <p id="music-time-p">03:00</p>
+        <p id="music-time-max" class="music-time-p">03:00</p>
       </div>
       <div class="music-volume-control">
         <svg
