--- a/admin.html
+++ b/admin.html
@@ -6,18 +6,24 @@
     <link rel="stylesheet" href="css/adminpage.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/adminPage.js" defer></script>
+    <title>ADMIN DASHBOARD</title>
   </head>
 
-
   <body>
+    <nav class="admin-page-nav"></nav>
     <div class="music-edit-container">
       <div class="add-new-music">
-        <form action="" id="uploadMusic-form" method="post" onsubmit="uploadMusic(event)">
+        <form
+          action=""
+          id="uploadMusic-form"
+          method="post"
+          onsubmit="uploadMusic(event)"
+        >
           <h2>Upload Music</h2>
           <label for="name-music-input">Name Music:</label>
-          <input type="text" name="name-music" id="name-music-input" required/>
+          <input type="text" name="name-music" id="name-music-input" required />
           <label for="path-music-input">Path:</label>
-          <input type="text" name="path-music" id="path-music-input" required/>
+          <input type="text" name="path-music" id="path-music-input" required />
           <label for="author-music-input">Author:</label>
           <input type="text" name="author-music" id="author-music-input" />
           <label for="img-path-music-input">Image Path:</label>
@@ -27,12 +33,94 @@
           <input type="submit" value="UpLoad Music" id="submit-music-btn" />
         </form>
       </div>
-      <div class="music-list-box">
-        
+      <div class="music-update-box">
+        <h2>Update Music</h2>
+        <table>
+          <tr>
+            <td>
+              <label for="update-music-id">Input ID</label>
+              <input
+                type="number"
+                name="musicId"
+                id="update-music-id"
+                class="update-input"
+              />
+            </td>
+            <td>
+              <button class="update-music-btn" onclick="loadMusicData()">Search Music</button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="update-music-name">Music Name</label>
+              <input
+                type="text"
+                name="musicName"
+                id="update-music-name"
+                class="update-input"
+              />
+            </td>
+            <td>
+              <label for="update-music-path">Music Path</label>
+              <input
+                type="text"
+                name="musicPath"
+                id="update-music-path"
+                class="update-input"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="update-music-author">Music Author</label>
+              <input
+                type="text"
+                name="musicAuthor"
+                id="update-music-author"
+                class="update-input"
+              />
+            </td>
+            <td>
+              <label for="update-img-path">Music Image</label>
+              <input
+                type="text"
+                name="imgPath"
+                id="update-img-path"
+                class="update-input"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <label for="update-gif-path">Music Gif</label>
+              <input
+                type="text"
+                name="update-gif-path"
+                id="update-gif-path"
+                class="update-input"
+              />
+            </td>
+            <td>
+              <label for="update-music-tag">Music Tag</label>
+              <input
+                type="text"
+                name="update-music-tag"
+                id="update-music-tag"
+                class="update-input"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><button class="update-music-btn">Update Music</button></td>
+          </tr>
+        </table>
       </div>
     </div>
     <div class="user-display">
-
+      <table id="user-display-table">
+        <!-- user display -->
+      </table>
     </div>
   </body>
 </html>
